# Algebra_of_polynomials

./: CMakeLists.txt  README (1).md  README.md
listlib/: CMakeLists.txt  THeadList.h  TList.h  TNode.h  main.cpp
polinom/: CMakeLists.txt  TPolinom_Test.cpp
polinomlib/: CMakeLists.txt  TMonom.h  TPolinom.h
polinomtest/: CMakeLists.txt  TestPolinom.cpp
postf/: CMakeLists.txt  main.cpp
postflib/: CMakeLists.txt  MyPostf.cpp  MyPostf.h
postftest/: CMakeLists.txt
table/: CMakeLists.txt  main.cpp
tablelib/: CMakeLists.txt  Table.h
tabletest/: CMakeLists.txt
